--- a/imagefloater.css
+++ b/imagefloater.css
@@ -1,25 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Abel&display=swap');
 
 .reveal{
-  margin-top: 50px;
+  margin-top: -80px;
   padding: 0;
   font-family: 'Abel', sans-serif;
 }
 
 #imgds{
     background-image: url("icons/ds_back.jpg");
-    
 }
 
-
-
-.bottomer{
-    margin-top: 40px;
-}
 .topper{
     margin-top: -80px;
 }
-  
+
 
 .main-card{
   color: white;
@@ -29,6 +23,7 @@
   position: relative;
   top: 50%;
   left: 50%;
+  float: inline-end;
   transform: translate(-50%, -50%);
   display: flex;
   text-align: center;
@@ -74,7 +69,7 @@
 }
 
 .main-card:hover .up-card{
-  top: -200px;
+  top: -100px;
   background-color: lightpink;
   align-items: center;
 }
