--- a/styles/app.css
+++ b/styles/app.css
@@ -342,10 +342,10 @@ img {
         .portfolio__box:nth-child(1), .portfolio__box:nth-child(4) {
           flex-direction: column; } }
       .portfolio__box:nth-child(1) .portfolio__img, .portfolio__box:nth-child(4) .portfolio__img {
-        width: 45%;
+        width: 60%;
         background-color: var(--color-accent); }
       .portfolio__box:nth-child(1) .portfolio__info, .portfolio__box:nth-child(4) .portfolio__info {
-        width: 50%; }
+        width: 70%; }
       .portfolio__box:nth-child(1) .portfolio__link, .portfolio__box:nth-child(4) .portfolio__link {
         color: var(--color-accent);
         border-color: var(--color-accent); }
@@ -406,16 +406,24 @@ img {
     padding: 2.5rem 0 0 2.5rem;
     line-height: 0; }
     .portfolio__img img {
-      border-top-left-radius: 0.7rem; }
+      border-top-left-radius: 0.9rem;
+      border-bottom-left-radius: 0.9rem; }
   .portfolio__title {
     font-size: 2.4rem;
     margin: 1rem 0;
     color: var(--color-lighter);
-    font-weight: var(--font-bold); }
+    font-weight: var(--font-bold);
+    padding-right: 8px;
+    padding-left: 8px; }
     @media only screen and (max-width: 600px) {
       .portfolio__title {
+        padding-right: 8px;
+        padding-left: 8px;
         font-size: 2rem; } }
   .portfolio__content {
+    text-align: justify;
+    padding-right: 12px;
+    padding-left: 8px;
     margin-bottom: 1rem; }
   .portfolio__link {
     font-size: 1.6rem;
